--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -187,7 +187,8 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module apisupport/ant..."/>
     <ant dir="../apisupport/ant" target="netbeans"/>
   </target>
-  <target name="all-apisupport/apidocs" depends="all-openide,all-apisupport">
+  <!-- #27098: MakeParserDB requires several modules to have been successfully built: -->
+  <target name="all-apisupport/apidocs" depends="all-openide,all-apisupport,all-core,all-classfile,all-java,all-java/api,all-editor">
     <echo message="Building module apisupport/apidocs..."/>
     <ant dir="../apisupport/apidocs" target="netbeans"/>
   </target>
