--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -274,7 +274,7 @@ After that you should be done!
     <target name="ant-module-javadoc">
         <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
         <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
-        <echo message="Build Lexer API documentation..."/>
+        <echo message="Build Ant API documentation..."/>
         <delete dir="AntAPIs"/>
         <mkdir dir="AntAPIs"/>
         <javadoc destdir="AntAPIs"
@@ -294,12 +294,14 @@ After that you should be done!
             <fileset dir="../openide/netbeans/lib">
               <include name="openide*.jar" />
             </fileset>
-            <fileset dir="${binroot}/ant/release/modules/ext">
+            <fileset dir="external">
               <include name="ant.jar"/>
               <include name="ant-1.*.jar"/>
             </fileset>
-            <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
-            <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
+            <fileset dir="../core/external">
+              <include name="xml-apis*.jar"/>
+              <include name="xerces*.jar"/>
+            </fileset>
             <pathelement location="../core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
           </classpath>
           <link href="${jdk-docs-location}"
