--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -17,7 +17,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="nbm_alias" value="nb_ide"/>
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
-  <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
   <property name="nbroot" location=".."/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
 
@@ -25,16 +25,13 @@ Microsystems, Inc. All Rights Reserved.
   <!-- <property name="src.openide.util" value="org/netbeans/modules/lexer/lang/LookupLanguageProvider.java"/> -->
   <!-- <property name="src.antlr" value="org/netbeans/modules/lexer/antlr/**/*.java"/> -->
 
-  <!-- antlr.jar -->
-  <!-- <property name="antlr" value="${binroot}/lexer/release/modules/ext/antlr.jar"/> -->
-
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
   <target name="compile-base" depends="hack13">
-    <javac srcdir="libsrc" destdir="libsrc"
+    <javac srcdir="src" destdir="src"
            excludes="${src.openide.util},${src.antlr}"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
@@ -65,7 +62,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <!-- <target name="compile-antlr" depends="compile-base">
-    <javac srcdir="libsrc" destdir="libsrc"
+    <javac srcdir="src" destdir="src"
            includes="${src.antlr}"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
@@ -78,7 +75,7 @@ Microsystems, Inc. All Rights Reserved.
   </target> -->
 
   <!-- <target name="compile-openide-util" depends="compile-base">
-    <javac srcdir="libsrc" destdir="libsrc"
+    <javac srcdir="src" destdir="src"
            includes="${src.openide.util}"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
@@ -99,7 +96,7 @@ Microsystems, Inc. All Rights Reserved.
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <locjar jarfile="netbeans/modules/lexer.jar"
             manifest="manifest-subst.mf"
-            basedir="libsrc"
+            basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false">
       <locale name="ja"/>
@@ -127,7 +124,7 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="LexerAPIs"/>
     <delete file="LexerAPIs.zip"/>
     <delete>
-      <fileset dir="libsrc">
+      <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
     </delete>
@@ -182,7 +179,7 @@ Microsystems, Inc. All Rights Reserved.
              maxmemory="64m"
     >
       <sourcepath>
-        <pathelement location="libsrc"/>
+        <pathelement location="src"/>
       </sourcepath>
       <classpath>
         <fileset dir="${nbroot}/openide/netbeans/lib">
