Issue #26572. Fixed list of packages for API javadoc.

--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -278,7 +278,7 @@ After that you should be done!
         <delete dir="AntAPIs"/>
         <mkdir dir="AntAPIs"/>
         <javadoc destdir="AntAPIs"
-             packagenames="org.netbeans.api.*,org.netbeans.spi.*,org.apache.tools.ant.module.*"
+             packagenames="org.netbeans.api.*,org.netbeans.spi.*,org.apache.tools.ant.module.api.*"
              doctitle="NetBeans module ant APIs"
              use="true"
              splitindex="true"
