--- a/xml/build.xml
+++ b/xml/build.xml
@@ -120,10 +120,9 @@ Microsystems, Inc. All Rights Reserved.
             <include name="**/src/**/mf-layer.xml"/>
             <exclude name="core/src/org/netbeans/modules/xml/core/resources/mf-layer.xml"/>
             <exclude name="schema/src/org/netbeans/modules/xml/schema/resources/mf-layer.xml"/>
-            <!-- WWW -->
-            <include name="www/**/data/**/*.xml"/>
-            <exclude name="www/**/qa/**/data/*.xml"/>
         </validatexml>
+
+        <ant dir="www" target="check"/>
     </target>
 
     <target name="test">
