Issue 27678. Make the build system more suitable for newcomers. Enabled merging of modules which have set compile time dependency in nbbuild/build.xml

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -11,7 +11,7 @@ stop.when.broken.modules=true
 # resolve compile time dependencies and merge all dependent modules
 # set to true and command `ant -Dmodules=javacvs` will build IDE
 # with working module javacvs
-merge.dependent.modules=false
+merge.dependent.modules=true
 
 # usefull for NBM build. <nbmerge> can set it to the list
 # of successfuly built modules => can create NBM for them
