Issue #27654 fixed. DataFolderPanel should not depend on FileObject.getPackageName - it should not be java-only

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -342,16 +342,16 @@ MSG_FontIsNotInitialized=Storing to XML failed because the value of font is not 
 
 # This next key will be a Java package name, don't include strange characters:
 # {0} - filesystem display name (don't use it probably!)
-FMT_TemplateDefaultPackageName=newPackage
+FMT_TemplateDefaultFolderName=newFolder
 LAB_DefaultDataFolder=Default
 LAB_SelectPackageBorder=Select Package
 LAB_TargetLocationDescription=Target Location
-LAB_package=Package:
+LAB_package=Folder:
 LAB_directory=Directory:
 LAB_TargetLocationPanelName=Target Location
 CTL_Create=Create
 LAB_TargetLocationDescription_mnemonic=T
-LAB_package_mnemonic=P
+LAB_package_mnemonic=F
 LAB_directory_mnemonic=D
 CTL_Create_mnemonic=C
 
