Updated db.url property. Added new property db.url.prefix ... this property is only for tests add/remove database driver.

--- a/db/test/database.properties
+++ b/db/test/database.properties
@@ -9,7 +9,7 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-xtest.userdata(pointbase)|db.url=jdbc:pointbase:server://localhost:9092/sample
+xtest.userdata(pointbase)|db.url=jdbc:pointbase://localhost:9092/sample
 xtest.userdata(pointbase)|db.user=pbpublic
 xtest.userdata(pointbase)|db.password=pbpublic
 xtest.userdata(pointbase)|db.driverclass=com.pointbase.jdbc.jdbcUniversalDriver
@@ -18,3 +18,7 @@ xtest.userdata(pointbase)|db.schema=PBPUBLIC
 xtest.userdata(pointbase)|db.db=PB
 xtest.userdata(pointbase)|db.columntyp=VARCHAR
 
+
+# this property is only for test add/remove DB driver
+# this property doesn't need changes
+xtest.userdata|db.url.prefix=jdbc:test_prefix://<HOST>:<PORT>/<DB>
