Utilities module now depends on core/settings module.

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -437,7 +437,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module usersguide..."/>
     <ant dir="../usersguide" target="netbeans"/>
   </target>
-  <target name="all-utilities" depends="all-openide,all-openidex">
+  <target name="all-utilities" depends="all-openide,all-openidex,all-core/settings">
     <echo message="Building module utilities..."/>
     <ant dir="../utilities" target="netbeans"/>
   </target>
