--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -26,6 +26,10 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
+  <target name="init">
+    <ant dir="external" target="unscramble"/>
+  </target>
+
   <target name="hack13">
     <available property="hack13" classname="java.lang.CharSequence" />
     <available property="uptodate" file="tmp/java/lang/CharSequence.class" />
@@ -43,7 +47,7 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="tmp" destdir="tmp" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}" />
   </target>
 
-  <target name="compile" depends="hack13">
+  <target name="compile" depends="init, hack13">
     <javac srcdir="src" destdir="src"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
