Added two new modules for Alpha autoupdate

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -177,6 +177,8 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         freestylebrowser, \
         innertesters, \
         lexer, \
+        lexer/editorbridge, \
+        lexer/editorbridge/calc, \
         logger, \
         makefile, \
         mdr, \
