--- a/lexer.editorbridge/build.xml
+++ b/lexer.editorbridge/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -35,12 +35,20 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
 
+<!-- this have to be done in nbbuild/build.xml in target all-lexer/editorbridge
+     using dependencies! It's necessary for NbMerge to know about that
+     dependency -->
+<!--
   <target name="build-lexer">
     <ant dir=".." target="netbeans" inheritAll="false"/>
     <ant dir="../../editor" target="netbeans" inheritAll="false"/>
   </target>
+-->
 
+<!--
   <target name="compile" depends="build-lexer">
+-->
+  <target name="compile">
     <javac srcdir="src" destdir="src"
            excludes="${src.openide.util},${src.antlr}"
            deprecation="${build.compiler.deprecation}"
