--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -132,6 +132,7 @@ Microsystems, Inc. All Rights Reserved.
   <target name="javahelp-apis" description="Create JavaHelp API documentation.">
     <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
     <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
+    <property name="openide.package-list.loc" location="${nbroot}/openide/OpenAPIs"/>
     <echo message="Build JavaHelp API documentation..."/>
     <delete dir="JavaHelpAPIs"/>
     <mkdir dir="JavaHelpAPIs"/>
@@ -161,7 +162,7 @@ Microsystems, Inc. All Rights Reserved.
       />
       <link href="${openide-docs-location}"
             offline="true"
-            packagelistLoc="api/doc/openide"
+            packagelistLoc="${openide.package-list.loc}"
       />
     </javadoc>
     <zip zipfile="JavaHelpAPIs.zip" basedir="JavaHelpAPIs"/>
