--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -139,6 +139,7 @@ Microsystems, Inc. All Rights Reserved.
   <target name="lexer-apis" description="Create Lexer API documentation.">
     <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
     <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
+    <property name="openide.package-list.loc" location="${nbroot}/openide/OpenAPIs"/>
     <echo message="Build Lexer API documentation..."/>
     <delete dir="LexerAPIs"/>
     <mkdir dir="LexerAPIs"/>
@@ -165,7 +166,7 @@ Microsystems, Inc. All Rights Reserved.
       />
       <link href="${openide-docs-location}"
             offline="true"
-            packagelistLoc="api/doc/openide"
+            packagelistLoc="${openide.package-list.loc}"
       />
     </javadoc>
     <zip zipfile="LexerAPIs.zip" basedir="LexerAPIs"/>
