--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -203,15 +203,17 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
 #     will be stripped for signature API tests
 javadoc.packages=org.netbeans.api.*, \
         org.netbeans.spi.*
-config.fixedmodules.javadoc=ant, \
+# take care of dependencies when reordering modules for javadoc
+# some javadocs must be built earlier than others for package-list
+config.fixedmodules.javadoc=openide, \
+        ant, \
         core/javahelp, \
         core/settings, \
         diff, \
         java/api, \
         lexer, \
-        mdr, \
-        openide, \
         openidex/looks, \
+        mdr, \
         xml/api
 config.modules.javadoc=
 
