Fixed build of lexer/editorbridge/calc sub-sub-module

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -348,6 +348,10 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module lexer/editorbridge..."/>
     <ant dir="../lexer/editorbridge" target="netbeans"/>
   </target>
+  <target name="all-lexer/editorbridge/calc" depends="all-openide,all-editor,all-lexer,all-lexer/editorbridge">
+    <echo message="Building module lexer/editorbridge/calc..."/>
+    <ant dir="../lexer/editorbridge/calc" target="netbeans"/>
+  </target>
   <target name="all-makefile" depends="all-openide">
     <echo message="Building module makefile..."/>
     <ant dir="../makefile" target="netbeans"/>
